--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>App Development</title>
+    <title>Canvas</title>
   </head>
   <body class="bg-[#F1F5E8] text-black">
     <div id="root"></div>
